Strip trailing hashtags on captions with spaces
A caption of "Hello world #hashtag " wasn’t having the hashtag
stripped, because the last word was `''`. Fix that.

--- a/source/2012/11/18/ambition-killed-the-cat.toml
+++ b/source/2012/11/18/ambition-killed-the-cat.toml
@@ -1,6 +1,6 @@
 published = 2012-11-18T14:42:58Z
-title = "Ambition killed the cat #daily "
-image = "http://mnf.m17s.net/2012/11/18/ambition-killed-the-cat-daily.jpg"
+title = "Ambition killed the cat"
+image = "http://mnf.m17s.net/2012/11/18/ambition-killed-the-cat.jpg"
 type = "instagram"
 original_caption = "Ambition killed the cat #daily  #tshirt"
 tag = [ "daily", "tshirt",]
