--- a/source/2016/01/23/turner-and-george-ribeyes.toml
+++ b/source/2016/01/23/turner-and-george-ribeyes.toml
@@ -1,4 +1,5 @@
 published = 2016-01-23T18:41:28Z
-title = "Turner and George ribeyes "
+title = "Turner and George ribeyes"
 image = "http://mnf.m17s.net/2016/01/23/turner-and-george-ribeyes.jpg"
 type = "instagram"
+original_caption = "Turner and George ribeyes "
