--- a/source/2016/01/27/meeting-room-shark.toml
+++ b/source/2016/01/27/meeting-room-shark.toml
@@ -1,5 +1,6 @@
 published = 2016-01-27T09:59:13Z
-title = "Meeting room shark "
+title = "Meeting room shark"
 image = "http://mnf.m17s.net/2016/01/27/meeting-room-shark.jpg"
 type = "instagram"
 location = "Metal Box Factory"
+original_caption = "Meeting room shark "
