--- a/source/2016/01/27/meeting-room-tv-and-bookcase.toml
+++ b/source/2016/01/27/meeting-room-tv-and-bookcase.toml
@@ -1,5 +1,6 @@
 published = 2016-01-27T09:58:46Z
-title = "Meeting room TV and bookcase "
+title = "Meeting room TV and bookcase"
 image = "http://mnf.m17s.net/2016/01/27/meeting-room-tv-and-bookcase.jpg"
 type = "instagram"
 location = "Metal Box Factory"
+original_caption = "Meeting room TV and bookcase "
