Add the destination bucket to site config
`flourish upload` needs to know where to upload to.

--- a/source/_site.toml
+++ b/source/_site.toml
@@ -1,3 +1,4 @@
 author = 'Mark Norman Francis'
 title = 'Mark Norman Francis'
 base_url = 'https://marknormanfrancis.com'
+bucket = 'marknormanfrancis.com'
