Be able to stop following a thread back

--- a/data/tweet_ids.toml
+++ b/data/tweet_ids.toml
@@ -11,8 +11,17 @@ title = "Legendary code"
 ['1030376837845864448']
 title = "Breaking my Twitter"
 
+['1076781091216916480']
+title = "How do you do, fellow kids?"
+stop_at = '1076780557726556160'
+
 ['1144337058191859713']
 title = "Off to the hospital"
+
+['1147087404769193984']
+title = 'My brand'
+stop_at = '1147086842631729152'
+tags = [ 'boozecase', 'rum', 'angostura', ]
 
 ['1185543485555953665']
 title = "Sunbeam"
