Override published when importing tweets

--- a/data/tweet_ids.toml
+++ b/data/tweet_ids.toml
@@ -21,6 +21,7 @@ title = "Off to the hospital"
 ['1147087404769193984']
 title = 'My brand'
 stop_at = '1147086842631729152'
+published = 2019-07-05T10:18:43Z
 tags = [ 'boozecase', 'rum', 'angostura', ]
 
 ['1185543485555953665']
