Avoid unnecessary repetition in some tweets
Where it is a single tweet, and the body is short, that will also end up as the title.

--- a/data/tweet_ids.toml
+++ b/data/tweet_ids.toml
@@ -15,6 +15,12 @@ title = "Breaking my Twitter"
 title = "How do you do, fellow kids?"
 stop_at = '1076780557726556160'
 
+['1084458534757109760']
+tags = [ 'socks', 'rainbow', ]
+
+['1084462633321943043']
+tags = [ 'showergel', 'rainbow', ]
+
 ['1144337058191859713']
 title = "Off to the hospital"
 
