Preserve hashtag if that’s the only caption

--- a/source/2017/03/15/bestboatseat.toml
+++ b/source/2017/03/15/bestboatseat.toml
@@ -1,8 +1,7 @@
 published = 2017-03-15T07:49:15Z
-title = ""
-image = "http://mnf.m17s.net/2017/03/15/image.jpg"
+title = "#bestboatseat"
+image = "http://mnf.m17s.net/2017/03/15/bestboatseat.jpg"
 type = "instagram"
 source = "instagram"
 location = "Plantation Wharf"
-original_caption = "#bestboatseat"
 tag = [ "bestboatseat",]
