--- a/source/2015/07/19/approved.toml
+++ b/source/2015/07/19/approved.toml
@@ -1,7 +1,6 @@
 published = 2015-07-19T13:04:17Z
-title = ""
-image = "http://mnf.m17s.net/2015/07/19/image.jpg"
+title = "#approved"
+image = "http://mnf.m17s.net/2015/07/19/approved.jpg"
 type = "instagram"
 source = "instagram"
-original_caption = "#approved"
 tag = [ "approved",]
