--- a/source/2016/04/08/gotmondo.toml
+++ b/source/2016/04/08/gotmondo.toml
@@ -1,7 +1,6 @@
 published = 2016-04-08T06:44:54Z
-title = ""
-image = "http://mnf.m17s.net/2016/04/08/image.jpg"
+title = "#gotmondo"
+image = "http://mnf.m17s.net/2016/04/08/gotmondo.jpg"
 type = "instagram"
 source = "instagram"
-original_caption = "#gotmondo"
 tag = [ "gotmondo",]
