Allow ignoring tags that are in the source

--- a/data/norms_ps4.toml
+++ b/data/norms_ps4.toml
@@ -83,46 +83,89 @@
 [1055510217348263936]
 
 [1056127057971818496]
+title = 'Red Dead Redemption 2'
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056132397996093441]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056214077259816960]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056259083613978626]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056530443984490496]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056628247717404673]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056643243708948481]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1056658480436838401]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1057744968205434886]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1057745605236346880]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1057748399611535360]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1057749124999725062]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058441740775055361]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058442165666353152]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058464675308994561]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058482523876007936]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058482692663205889]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058482922603405313]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1058662744608722945]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1059049846504599552]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1059056044507385856]
+tags = [ 'reddeadredemption2', ]
+remove_tags = [ 'reddeadredemption', ]
 
 [1059171149257605120]
 
