--- a/source/2011/10/07/teaching-mnowster-some-css.toml
+++ b/source/2011/10/07/teaching-mnowster-some-css.toml
@@ -3,3 +3,4 @@ title = "Teaching @mnowster some CSS"
 image = "http://mnf.m17s.net/2011/10/07/teaching-mnowster-some-css.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'css', 'whiteboard', ]
