--- a/source/2012/02/06/progressive-enhancement.toml
+++ b/source/2012/02/06/progressive-enhancement.toml
@@ -3,3 +3,4 @@ title = "Progressive enhancement …"
 image = "http://mnf.m17s.net/2012/02/06/progressive-enhancement.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'whiteboard', ]
