--- a/source/2012/02/08/css-shorthand-lesson-for-mnowster.toml
+++ b/source/2012/02/08/css-shorthand-lesson-for-mnowster.toml
@@ -3,3 +3,4 @@ title = "CSS shorthand lesson for @mnowster"
 image = "http://mnf.m17s.net/2012/02/08/css-shorthand-lesson-for-mnowster.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'css', 'whiteboard', ]
