--- a/source/2012/02/08/the-mysteries-of-floats.toml
+++ b/source/2012/02/08/the-mysteries-of-floats.toml
@@ -3,3 +3,4 @@ title = "The mysteries of floats"
 image = "http://mnf.m17s.net/2012/02/08/the-mysteries-of-floats.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'css', 'whiteboard', ]
