--- a/source/2012/02/08/the-mysteries-of-line-height.toml
+++ b/source/2012/02/08/the-mysteries-of-line-height.toml
@@ -3,3 +3,4 @@ title = "The mysteries of line-height"
 image = "http://mnf.m17s.net/2012/02/08/the-mysteries-of-line-height.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'css', 'whiteboard', ]
