--- a/source/2012/02/09/the-mystery-of-the-extra-click-handler.toml
+++ b/source/2012/02/09/the-mystery-of-the-extra-click-handler.toml
@@ -3,3 +3,4 @@ title = "The mystery of the extra click handler"
 image = "http://mnf.m17s.net/2012/02/09/the-mystery-of-the-extra-click-handler.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'javascript', 'whiteboard', ]
