--- a/source/2012/07/25/now-thats-what-a-whiteboard-should-look-like.toml
+++ b/source/2012/07/25/now-thats-what-a-whiteboard-should-look-like.toml
@@ -3,3 +3,4 @@ title = "Now THAT'S what a whiteboard should look like"
 image = "http://mnf.m17s.net/2012/07/25/now-thats-what-a-whiteboard-should-look-like.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'whiteboard', ]
