--- a/source/2011/08/15/the-last-artfinder-deploy-by-georgebrock.toml
+++ b/source/2011/08/15/the-last-artfinder-deploy-by-georgebrock.toml
@@ -3,3 +3,4 @@ title = "The last @artfinder deploy by @georgebrock"
 image = "http://mnf.m17s.net/2011/08/15/the-last-artfinder-deploy-by-georgebrock.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'artfinder', 'deploy', ]
