--- a/source/2012/01/27/a-lesson-on-box-shadow-for-mnowster.toml
+++ b/source/2012/01/27/a-lesson-on-box-shadow-for-mnowster.toml
@@ -3,3 +3,4 @@ title = "A lesson on box-shadow for @mnowster"
 image = "http://mnf.m17s.net/2012/01/27/a-lesson-on-box-shadow-for-mnowster.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'css', 'whitebord', ]
