--- a/source/2012/02/17/js-form-flow-explanation-for-mnowster.toml
+++ b/source/2012/02/17/js-form-flow-explanation-for-mnowster.toml
@@ -3,3 +3,4 @@ title = "JS form flow explanation for @mnowster"
 image = "http://mnf.m17s.net/2012/02/17/js-form-flow-explanation-for-mnowster.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'javascript', 'whiteboard', ]
