--- a/source/2012/07/06/the-layout-of-the-new-artfinder-work-page.toml
+++ b/source/2012/07/06/the-layout-of-the-new-artfinder-work-page.toml
@@ -3,3 +3,4 @@ title = "The layout of the new @artfinder work page"
 image = "http://mnf.m17s.net/2012/07/06/the-layout-of-the-new-artfinder-work-page.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'css', 'whiteboard', ]
