--- a/source/2012/08/07/not-a-css-whiteboard-session.toml
+++ b/source/2012/08/07/not-a-css-whiteboard-session.toml
@@ -3,3 +3,4 @@ title = "Not a CSS whiteboard session"
 image = "http://mnf.m17s.net/2012/08/07/not-a-css-whiteboard-session.jpg"
 type = "instagram"
 source = "instagram"
+tag = [ 'dns', 'whiteboard', ]
