Weekly poker chips

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -197,3 +197,6 @@ tags = [ 'boozecase', 'whisky', 'rum', 'gin', ]
 ['1196453823549788162']
 title = "Many presents"
 tags = [ 'boozecase', 'scapa', ]
+
+['1274059505773547522']
+title = "My week in poker chips"
