--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -204,3 +204,6 @@ tag = [ "weekchips",]
 title = "Chips for Week 26, 2020"
 
 [1276516870309515266]
+
+[1279086645862637569]
+title = "Chips for Week 27, 2020"
