Add some more posts taken from Twitter

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -196,6 +196,25 @@ tags = [ "boozecase", "whisky", "rum", "gin",]
 title = "Many presents"
 tags = [ "boozecase", "scapa",]
 
+[1210692974067290112]
+title = "I helped kill a man"
+
+[1215187713374216193]
+
+[1233051475980509185]
+
+[1245003053268439041]
+
+[1251924107375054849]
+
+[1267850330164912128]
+title = "A new start"
+
+[1278319054449774592]
+
+[1266999062055788547]
+title = "Flashbacks"
+
 [1274059505773547522]
 title = "My week in poker chips"
 
