Add weekchips post

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -226,3 +226,6 @@ title = "Chips for Week 26, 2020"
 
 [1279086645862637569]
 title = "Chips for Week 27, 2020"
+
+[1281639272395804672]
+title = "Chips for Week 28, 2020"
