--- a/source/2016/05/05/polling-station.toml
+++ b/source/2016/05/05/polling-station.toml
@@ -1,5 +1,5 @@
 published = 2016-05-05T07:40:27Z
-title = "✅"
+title = "Polling station"
 image = "http://mnf.m17s.net/2016/05/05/image.jpg"
 type = "instagram"
 source = "instagram"
