--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -229,3 +229,6 @@ title = "Chips for Week 27, 2020"
 
 [1281639272395804672]
 title = "Chips for Week 28, 2020"
+
+[1284175386943852547]
+title = "Chips for Week 29, 2020"
