Add two weekchips updates

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -232,3 +232,9 @@ title = "Chips for Week 28, 2020"
 
 [1284175386943852547]
 title = "Chips for Week 29, 2020"
+
+[1286732602628612096]
+title = "Chips for Week 30, 2020"
+
+[1289242485730840576]
+title = "Chips for Week 31, 2020"
