--- a/data/norms_ps4.toml
+++ b/data/norms_ps4.toml
@@ -94,22 +94,22 @@ title = "I Name You"
 
 [1045768176728985600]
 title = "Spidey"
-tags = [ 'spider-man', ]
+tags = [ "spider-man",]
 
 [1045768325920423936]
 title = "George Washington Bridge"
-tags = [ 'spider-man', ]
+tags = [ "spider-man",]
 
 [1045768410741829632]
 title = "Iron Spider"
-tags = [ 'spider-man', ]
+tags = [ "spider-man",]
 
 [1045768511921025025]
 title = "Vintage Comic Book Suit"
-tags = [ 'spider-man', ]
+tags = [ "spider-man",]
 
 [1055507815379492865]
-tags = [ 'assassins-creed', ]
+tags = [ "assassins-creed",]
 
 [1055509411840643073]
 
@@ -118,89 +118,89 @@ tags = [ 'assassins-creed', ]
 [1055510217348263936]
 
 [1056127057971818496]
-title = 'Red Dead Redemption 2'
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+title = "Red Dead Redemption 2"
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056132397996093441]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056214077259816960]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056259083613978626]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056530443984490496]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056628247717404673]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056643243708948481]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1056658480436838401]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1057744968205434886]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1057745605236346880]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1057748399611535360]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1057749124999725062]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058441740775055361]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058442165666353152]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058464675308994561]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058482523876007936]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058482692663205889]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058482922603405313]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1058662744608722945]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1059049846504599552]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1059056044507385856]
-tags = [ 'reddeadredemption2', ]
-remove_tags = [ 'reddeadredemption', ]
+tags = [ "reddeadredemption2",]
+remove_tags = [ "reddeadredemption",]
 
 [1059171149257605120]
 title = "Arthur Morgan"
@@ -659,7 +659,7 @@ ignore = true
 [1119710934291947520]
 
 [1164613064760672258]
-tags = [ 'platinum', ]
+tags = [ "platinum",]
 
 [1164613520052408320]
 
