Add missing weekchips

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -238,3 +238,15 @@ title = "Chips for Week 30, 2020"
 
 [1289242485730840576]
 title = "Chips for Week 31, 2020"
+
+[1292505550287261698]
+title = "Chips for Week 32, 2020"
+
+[1294577495539363840]
+title = "Chips for Week 33, 2020"
+
+[1297129383791075328]
+title = "Chips for Week 34, 2020"
+
+[1297107256354504704]
+title = "My weekchips markers"
