Add the cackhanded journey

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -251,3 +251,6 @@ title = "Chips for Week 34, 2020"
 title = "My weekchips markers"
 
 [1300893963344384000]
+
+[1363512799327059973]
+title = "Watching the Star Trek movies (cackhanded journey)"
