Fetch public YouTube channel uploads

--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -9,3 +9,4 @@ tweet      = "base_article"
 instagram  = "base_article"
 foursquare = "base_article"
 recipe     = "base_article"
+youtube    = "base_article"
