--- a/.github/workflows/pull_content.yaml
+++ b/.github/workflows/pull_content.yaml
@@ -1,18 +1,15 @@
-name: Rebuild the website
+name: Pull automatic content updates
 
 on:
-  push:
-    branches:
-      - main
   schedule:
     #        min   hr    dom   mon   dow
-    - cron: '42    01    *     *     *'     # daily at 1.42am
+    - cron: '11    01    *     *     *'     # daily at 1.11am
   workflow_dispatch:
 
 jobs:
   update:
     name: Update
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -35,20 +32,14 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Generate CSS
+      - name: Pull automatic content
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          YOUTUBE_KEY: ${{ secrets.YOUTUBE_KEY }}
         run: |
-          make clean baked_css upload
+          ./script/pull_content
 
-      - name: Generate site
-        run: |
-          make clean generate
-
-      - name: Upload site
+      - name: Commit and PR any changes
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
-          make upload
+          ./script/commit_changes "Automatic content updates"
