Issue cloudfront invalidations on upload

--- a/source/_site.toml
+++ b/source/_site.toml
@@ -2,3 +2,4 @@ author = 'Mark Norman Francis'
 title = 'Mark Norman Francis'
 base_url = 'https://marknormanfrancis.com'
 bucket = 'marknormanfrancis.com'
+cloudfront_id = 'E3KM80ZDXNHA6G'
