--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -10,3 +10,4 @@ instagram  = "base_article"
 foursquare = "base_article"
 recipe     = "base_article"
 youtube    = "base_article"
+gif        = "base_article"
