--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -11,3 +11,4 @@ foursquare = "base_article"
 recipe     = "base_article"
 youtube    = "base_article"
 gif        = "base_article"
+github     = "base_article"
