Change activity token env name
The `GITHUB_` prefix is restricted on GitHub, which should have been obvious.

--- a/.github/workflows/pull_content.yaml
+++ b/.github/workflows/pull_content.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Pull automatic content
         env:
           YOUTUBE_KEY: ${{ secrets.YOUTUBE_KEY }}
+          GH_ACTIVITY_TOKEN: ${{ secrets.GH_ACTIVITY_TOKEN }}
         run: |
           ./script/pull_content
 
