Check the output before publishing the site
I don't want posts being published that contain "undefined" (or the
older "tweet at") in the title/slug. Run a test script against the
generated output before publishing.

--- a/.github/workflows/rebuild.yaml
+++ b/.github/workflows/rebuild.yaml
@@ -34,6 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+          sudo apt-get install ripgrep
 
       - name: Generate CSS
         env:
@@ -45,6 +46,10 @@ jobs:
       - name: Generate site
         run: |
           make clean generate
+
+      - name: Test for problems
+        run: |
+          make test
 
       - name: Upload site
         env:
