--- a/.github/workflows/rebuild.yaml
+++ b/.github/workflows/rebuild.yaml
@@ -8,6 +8,11 @@ on:
     #        min   hr    dom   mon   dow
     - cron: '42    01    *     *     *'     # daily at 1.42am
   workflow_dispatch:
+    inputs:
+      debug_enabled:
+        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'     
+        required: false
+        default: false
 
 jobs:
   update:
@@ -50,6 +55,12 @@ jobs:
       - name: Test for problems
         run: |
           make test
+
+      - name: Setup tmate debugging session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
 
       - name: Upload site
         env:
