Add missing secrets from updated pull workflow

--- a/.github/workflows/pull_content.yaml
+++ b/.github/workflows/pull_content.yaml
@@ -36,6 +36,10 @@ jobs:
         env:
           YOUTUBE_KEY: ${{ secrets.YOUTUBE_KEY }}
           GH_ACTIVITY_TOKEN: ${{ secrets.GH_ACTIVITY_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
         run: |
           ./script/pull_content
 
