Let pulled content push files to S3
Newly pulled content with media (eg a tweet with a photo attached)
will try to write that media to S3.

--- a/.github/workflows/pull_content.yaml
+++ b/.github/workflows/pull_content.yaml
@@ -40,6 +40,8 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           ./script/pull_content
 
