Test getting workflow run failure notifications

--- a/.github/workflows/pull_content.yaml
+++ b/.github/workflows/pull_content.yaml
@@ -44,6 +44,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           ./script/pull_content
+          false
 
       - name: Commit and PR any changes
         env:
@@ -51,3 +52,8 @@ jobs:
           TWIST_URL: ${{secrets.TWIST_URL}}
         run: |
           ./script/commit_changes "Automatic content updates"
+
+      - name: Notify on failure
+        if: ${{ failure() }}
+        run: |
+          ./script/twist_post $(date +'%Y-%m-%d') "Automatic content update failed"
