Add error details to the body of a Twist post
I didn't immediately notice the pull content failure this morning.
Despite there being a successful post to Twist, nothing shows in the Mac
app. The post does show in iOS but the theoretical title is ignored in
favour of the integration's title, so it is unclear what the post was.

--- a/.github/workflows/pull_content.yaml
+++ b/.github/workflows/pull_content.yaml
@@ -57,4 +57,7 @@ jobs:
           TWIST_URL: ${{secrets.TWIST_URL}}
         if: failure()
         run: |
-          echo "" | ./script/twist_post FAILURE: $(date +'%Y-%m-%d') Automatic content update
+          (
+            echo "# Pull content workflow failure"
+            echo "$(date +'%Y-%m-%d') - $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+          ) | ./script/twist_post
