Add history of making GIFs post

--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -12,3 +12,4 @@ recipe     = "base_article"
 youtube    = "base_article"
 gif        = "base_article"
 github     = "base_article"
+article    = "base_article"
