--- a/source/2017/03/24/last-boat-home-after.toml
+++ b/source/2017/03/24/last-boat-home-after.toml
@@ -1,5 +1,5 @@
 published = 2017-03-24T20:18:30Z
-title = "Last boat home after Scale Summit 2017"
+title = "Last boat home after"
 image = "https://mnf.m17s.net/2017/03/24/last-boat-home-after.jpg"
 type = "instagram"
 source = "instagram"
